--- a/ExcelAddInVSTOCS/ExcelAddInVSTOCS/DemoTaskPaneWPF.xaml
+++ b/ExcelAddInVSTOCS/ExcelAddInVSTOCS/DemoTaskPaneWPF.xaml
@@ -8,5 +8,13 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Button >WPF 按钮</Button>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
     </Grid>
 </UserControl>
